--- a/Metododepag.html
+++ b/Metododepag.html
@@ -5,10 +5,6 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
-		<title>Electro - HTML Ecommerce Template</title>
-
  		<!-- Google font -->
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
 
@@ -28,12 +24,7 @@
  		<!-- Custom stlylesheet -->
  		<link type="text/css" rel="stylesheet" href="css/style.css"/>
 
-		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-		<!--[if lt IE 9]>
-		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->
+	
 
     </head>
 	<body>
@@ -81,32 +72,8 @@
 						</div>
 					</ul>
 					<ul class="header-links pull-right">
-						<li><a href="#"><i class="fa fa-dollar"></i>MXN</a></li>
-							<!-- Header Modal -->
-							<li><a href="#deseos" class="fa fa-user-o" data-toggle="modal"> Mi perfil</a></li>
-							<div class="modal fade" id="deseos">
-									<div class="modal_dialog">
-										<div class="modal-content">
-											<div class="modal-header">
-												<button tyle="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-												<h4 class="modal-title">Confirmación											
-												</h4>
-											</div>
-											<!-- Header Body -->
-											<div class="modal-body">
-												<p>
-													<img src="./img/usuario.png" alt="">
-													<br>
-													<strong>Usuario: nombre 1</strong> 
-													<br>
-													<strong>Correo: nombre1@alumno.ipn.mx</strong> 
-													<br>
-												</br>
-												</p>
-											</div>
-										</div>
-									</div>
-							</div>
+						<li><a  href="loginvendedor.html" href="#"><i class="fa fa-dollar"></i>¿Quieres vender?</a></li>
+						<li><a href="perfil.html" href="#"><i class="fa fa-user-o"></i>Mi perfil</li></a>
 					</ul>
 				</div>
 			</div>
