--- a/perfil.html
+++ b/perfil.html
@@ -260,7 +260,7 @@ body {
 					</div>
 				</ul>
 				<ul class="header-links pull-right">
-					<li><a href="#"><i class="fa fa-dollar"></i>MXN</a></li>
+					<li><a  href="loginvendedor.html" href="#"><i class="fa fa-dollar"></i>¿Quieres vender?</a></li>
 					<li><a href="perfil.html" href="#"><i class="fa fa-user-o"></i>Mi perfil</li></a>
 					
 				</ul>
