--- a/deleteproduct.html
+++ b/deleteproduct.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
+	
 
 		<title>ADOO</title>
 
@@ -28,7 +28,7 @@
  		<!-- Custom stlylesheet -->
  		<link type="text/css" rel="stylesheet" href="css/style.css"/>
 
-	
+		
 
     </head>
 	<body>
@@ -76,7 +76,8 @@
 						</div>
 					</ul>
 					<ul class="header-links pull-right">
-						<li><a  href="loginvendedor.html" href="#"><i class="fa fa-dollar"></i>¿Quieres vender?</a></li>
+						<li><a href="productregister.html"><i class="fa fa-dollar"></i>Agregar producto</a></li>
+						
 						<li><a href="perfil.html" href="#"><i class="fa fa-user-o"></i>Mi perfil</li></a>
 					</ul>
 				</div>
@@ -227,10 +228,8 @@
 				<div class="row">
 					<div class="col-md-12">
 						<ul class="breadcrumb-tree">
-							<li><a href="#">Inicio</a></li>
-							<li><a href="#">Categorias</a></li>
-							<li><a href="#">Papeleria</a></li>
-							<li class="active">Todo (290 Resultados)</li>
+							<li><a href="index.html">Inicio</a></li>
+							<li><a href="deleteproduct.html">Eliminar/Modificar producto</a></li>
 						</ul>
 					</div>
 				</div>
@@ -257,8 +256,7 @@
 									<input type="checkbox" id="category-1">
 									<label for="category-1">
 										<span></span>
-										Hojas
-										<small>(70)</small>
+										Comida
 									</label>
 								</div>
 
@@ -266,8 +264,7 @@
 									<input type="checkbox" id="category-2">
 									<label for="category-2">
 										<span></span>
-										Cuadernos
-										<small>(20)</small>
+										Electrónica
 									</label>
 								</div>
 
@@ -275,8 +272,7 @@
 									<input type="checkbox" id="category-3">
 									<label for="category-3">
 										<span></span>
-										Libros
-										<small>(30)</small>
+										Tecnología
 									</label>
 								</div>
 
@@ -284,8 +280,7 @@
 									<input type="checkbox" id="category-4">
 									<label for="category-4">
 										<span></span>
-										Útiles
-										<small>(28)</small>
+										Juegos de Mesa
 									</label>
 								</div>
 
@@ -293,8 +288,7 @@
 									<input type="checkbox" id="category-5">
 									<label for="category-5">
 										<span></span>
-										Calculadoras
-										<small>(12)</small>
+										Papelería
 									</label>
 								</div>
 
@@ -302,110 +296,13 @@
 									<input type="checkbox" id="category-6">
 									<label for="category-6">
 										<span></span>
-										Impresiones
-										<small>(10)</small>
+										Espiritu IPN
 									</label>
 								</div>
 							</div>
 						</div>
 						<!-- /aside Widget -->
 
-						<!-- aside Widget -->
-						<div class="aside">
-							<h3 class="aside-title">Precios</h3>
-							<div class="price-filter">
-								<div id="price-slider"></div>
-								<div class="input-number price-min">
-									<input id="price-min" type="number">
-									<span class="qty-up">+</span>
-									<span class="qty-down">-</span>
-								</div>
-								<span>-</span>
-								<div class="input-number price-max">
-									<input id="price-max" type="number">
-									<span class="qty-up">+</span>
-									<span class="qty-down">-</span>
-								</div>
-							</div>
-						</div>
-						<!-- /aside Widget -->
-
-						<!-- aside Widget -->
-						<div class="aside">
-							<h3 class="aside-title">Filtro</h3>
-							<div class="checkbox-filter">
-								<div class="input-checkbox">
-									<input type="checkbox" id="brand-1">
-									<label for="brand-1">
-										<span></span>
-										Plumas
-										<small>(78)</small>
-									</label>
-								</div>
-								<div class="input-checkbox">
-									<input type="checkbox" id="brand-2">
-									<label for="brand-2">
-										<span></span>
-										Cuadernos
-										<small>(25)</small>
-									</label>
-								</div>
-								<div class="input-checkbox">
-									<input type="checkbox" id="brand-3">
-									<label for="brand-3">
-										<span></span>
-										Graficadoras
-										<small>(15)</small>
-									</label>
-								</div>
-								<div class="input-checkbox">
-									<input type="checkbox" id="brand-4">
-									<label for="brand-4">
-										<span></span>
-										Plumones
-										<small>(22)</small>
-									</label>
-								</div>
-								<div class="input-checkbox">
-									<input type="checkbox" id="brand-5">
-									<label for="brand-5">
-										<span></span>
-										Cartulinas
-										<small>(50)</small>
-									</label>
-								</div>
-							</div>
-						</div>
-						<!-- /aside Widget -->
-
-						<!-- aside Widget -->
-						<div class="aside">
-							<h3 class="aside-title">Más vendido</h3>
-							<div class="product-widget">
-								<div class="product-img">
-									<img src="./img/pape1.jpg" alt="">
-								</div>
-								<div class="product-body">
-									<p class="product-category">Plumones</p>
-									<h3 class="product-name"><a href="#">Plumones STABILLO</a></h3>
-									<h4 class="product-price">$180.00</h4>
-								</div>
-							</div>
-
-							<div class="product-widget">
-								<div class="product-img">
-									<img src="./img/pape2.jpg" alt="">
-								</div>
-								<div class="product-body">
-									<p class="product-category">Útiles</p>
-									<h3 class="product-name"><a href="#">Kit útiles básicos</a></h3>
-									<h4 class="product-price">$290.00 </h4>
-								</div>
-							</div>
-
-		
-						</div>
-						<!-- /aside Widget -->
 					</div>
 					<!-- /ASIDE -->
 
@@ -414,14 +311,6 @@
 						<!-- store top filter -->
 						<div class="store-filter clearfix">
 							<div class="store-sort">
-								<label>
-									Ordenar por:
-									<select class="input-select">
-										<option value="0">Popular</option>
-										<option value="1">Precios</option>
-									</select>
-								</label>
-
 								<label>
 									Mostrar:
 									<select class="input-select">
@@ -445,8 +334,6 @@
 									<div class="product-img">
 										<img src="./img/pape1.jpg" alt="">
 										<div class="product-label">
-											<span class="sale">-30%</span>
-											<span class="new">NUEVO</span>
 										</div>
 									</div>
 									<div class="product-body">
@@ -460,13 +347,12 @@
 											<i class="fa fa-star"></i>
 											<i class="fa fa-star"></i>
 										</div>
-										<div class="product-btns">
-											<button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">añadir a deseos</span></button>
-											<button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">ver</span></button>
-										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> comprar</button>
+										<button class="add-to-cart-btn"> Eliminar</button>
+										<br>
+										<br>
+										<button class="add-to-cart-btn">Modificar</button>
 									</div>
 								</div>
 							</div>
@@ -492,13 +378,12 @@
 											<i class="fa fa-star"></i>
 											<i class="fa fa-star"></i>
 										</div>
-										<div class="product-btns">
-											<button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">añadir a deseos</span></button>
-											<button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">ver</span></button>
-										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> comprar</button>
+										<button class="add-to-cart-btn"> Eliminar</button>
+										<br>
+										<br>
+										<button class="add-to-cart-btn">Modificar</button>
 									</div>
 								</div>
 							</div>
@@ -523,13 +408,12 @@
 											<i class="fa fa-star"></i>
 											<i class="fa fa-star"></i>
 										</div>
-										<div class="product-btns">
-											<button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">añadir a deseos</span></button>
-											<button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">ver</span></button>
-										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> comprar</button>
+										<button class="add-to-cart-btn"> Eliminar</button>
+										<br>
+										<br>
+										<button class="add-to-cart-btn">Modificar</button>
 									</div>
 								</div>
 							</div>
@@ -554,13 +438,12 @@
 											<i class="fa fa-star"></i>
 											<i class="fa fa-star"></i>
 										</div>
-										<div class="product-btns">
-											<button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">añadir a deseos</span></button>
-											<button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">ver</span></button>
-										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> comprar</button>
+										<button class="add-to-cart-btn"> Eliminar</button>
+										<br>
+										<br>
+										<button class="add-to-cart-btn">Modificar</button>
 									</div>
 								</div>
 							</div>
@@ -585,13 +468,12 @@
 											<i class="fa fa-star"></i>
 											<i class="fa fa-star"></i>
 										</div>
-										<div class="product-btns">
-											<button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">añadir a deseos</span></button>
-											<button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">ver</span></button>
-										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> comprar</button>
+										<button class="add-to-cart-btn"> Eliminar</button>
+										<br>
+										<br>
+										<button class="add-to-cart-btn">Modificar</button>
 									</div>
 								</div>
 							</div>
@@ -617,13 +499,12 @@
 											<i class="fa fa-star"></i>
 											<i class="fa fa-star"></i>
 										</div>
-										<div class="product-btns">
-											<button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">añadir a deseos</span></button>
-											<button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">ver</span></button>
-										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> comprar</button>
+										<button class="add-to-cart-btn"> Eliminar</button>
+										<br>
+										<br>
+										<button class="add-to-cart-btn">Modificar</button>
 									</div>
 								</div>
 							</div>
@@ -637,8 +518,6 @@
 									<div class="product-img">
 										<img src="./img/pape1.jpg" alt="">
 										<div class="product-label">
-											<span class="sale">-30%</span>
-											<span class="new">NUEVO</span>
 										</div>
 									</div>
 									<div class="product-body">
@@ -652,13 +531,12 @@
 											<i class="fa fa-star"></i>
 											<i class="fa fa-star"></i>
 										</div>
-										<div class="product-btns">
-											<button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">añadir a deseos</span></button>
-											<button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">ver</span></button>
-										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> comprar</button>
+										<button class="add-to-cart-btn"> Eliminar</button>
+										<br>
+										<br>
+										<button class="add-to-cart-btn">Modificar</button>
 									</div>
 								</div>
 							</div>
@@ -682,13 +560,12 @@
 											<i class="fa fa-star"></i>
 											<i class="fa fa-star"></i>
 										</div>
-										<div class="product-btns">
-											<button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">añadir a deseos</span></button>
-											<button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">ver</span></button>
-										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> comprar</button>
+										<button class="add-to-cart-btn"> Eliminar</button>
+										<br>
+										<br>
+										<button class="add-to-cart-btn">Modificar</button>
 									</div>
 								</div>
 							</div>
@@ -713,13 +590,12 @@
 											<i class="fa fa-star"></i>
 											<i class="fa fa-star"></i>
 										</div>
-										<div class="product-btns">
-											<button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">añadir a deseos</span></button>
-											<button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">ver</span></button>
-										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> comprar</button>
+										<button class="add-to-cart-btn"> Eliminar</button>
+										<br>
+										<br>
+										<button class="add-to-cart-btn">Modificar</button>
 									</div>
 								</div>
 							</div>
