--- a/loginvendedor.html
+++ b/loginvendedor.html
@@ -25,7 +25,7 @@
 
  		<!-- Custom stlylesheet -->
  		<link type="text/css" rel="stylesheet" href="css/style.css"/>
-	
+		
 	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
 	
 		<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
@@ -93,10 +93,7 @@
 								</div>
 						</div>
 					</ul>
-					<ul class="header-links pull-right">
-						<li><a href="#"><i class="fa fa-dollar"></i>MXN</a></li>
-						<li><a href="perfil.html" href="#"><i class="fa fa-user-o"></i>Mi perfil</li></a>
-					</ul>
+					
 				</div>
 			</div>
 			<!-- /TOP HEADER -->
@@ -116,9 +113,15 @@
 							<input class="input100" type="password" name="pass" placeholder="Contraseña">
 							<span class="focus-input100"></span>
 						</div>
+
+						<div class="wrap-input100 validate-input m-b-25" data-validate = "RFC">
+							<input class="input100" type="RFC" name="pass" placeholder="RFC">
+							<span class="focus-input100"></span>
+						</div>
+
 						<div class="container-login100-form-btn">
 							<button class="login100-form-btn">
-								<a href="Metododepag.html"><i class="fa fa-user-o"></i> Iniciar sesión </a>
+								<a href="productregister.html"><i class="fa fa-user-o"></i> Iniciar sesión </a>
 							</button>
 						</div>
 
