--- a/Crearcuenta.html
+++ b/Crearcuenta.html
@@ -47,45 +47,45 @@
 
 		<!-- Custom stlylesheet -->
 		<link type="text/css" rel="stylesheet" href="css/style.css"/>
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="./js/signup.js"></script>
 </head>
 <body>
 	
 	
 	<div class="container-login100" style="background-image: url('img/escom1.jpeg');">
 		<div class="wrap-login100 p-l-55 p-r-55 p-t-80 p-b-30">
-			<form class="login100-form validate-form">
 				<span class="login100-form-title p-b-37">
 					Crear cuenta
 				</span>
 
 				<div class="wrap-input100 validate-input m-b-20" data-validate="email">
-					<input class="input100" type="text" name="username" placeholder="Nombre">
+					<input id="name" class="input100" type="text" name="username" placeholder="Nombre">
 					<span class="focus-input100"></span>
 				</div>
 
 				<div class="wrap-input100 validate-input m-b-20" data-validate="email">
-					<input class="input100" type="text" name="username" placeholder="Correo institucional">
+					<input id="email" class="input100" type="text" name="username" placeholder="Correo institucional">
 					<span class="focus-input100"></span>
 				</div>
 
 				<div class="wrap-input100 validate-input m-b-25" data-validate = "password">
-					<input class="input100" type="password" name="pass" placeholder="contraseña (8 caracteres mínimo)">
+					<input id="password" class="input100" type="password" name="pass" placeholder="contraseña (8 caracteres mínimo)">
 					<span class="focus-input100"></span>
 				</div>
 
 				<div class="wrap-input100 validate-input m-b-25" data-validate = "password">
-					<input class="input100" type="password" name="pass" placeholder="Inserte de nuevo la contraseña">
+					<input id="confirmPass" class="input100" type="password" name="pass" placeholder="Inserte de nuevo la contraseña">
 					<span class="focus-input100"></span>
 				</div>
 																		
 				<div class="container-login100-form-btn">
-					<button class="login100-form-btn">
-						<a href="login.html"><i class="fa fa-user-o"></i> Iniciar sesión </a>
+					<button id="button" class="login100-form-btn">
+						Login
 					</button>
 				</div>
-
-				
-			</form>			
+	
 		</div>
 	</div>
 	
