--- a/Recuperar.html
+++ b/Recuperar.html
@@ -53,15 +53,9 @@
 	
 	<div class="container-login100" style="background-image: url('img/escom1.jpeg');">
 		<div class="wrap-login100 p-l-55 p-r-55 p-t-80 p-b-30">
-			<form class="login100-form validate-form">
 				<span class="login100-form-title p-b-37">
 					Recuperar contraseña
 				</span>
-
-				<div class="wrap-input100 validate-input m-b-20" data-validate="email">
-					<input class="input100" type="text" name="username" placeholder="Nombre">
-					<span class="focus-input100"></span>
-				</div>
 
 				<div class="wrap-input100 validate-input m-b-20" data-validate="email">
 					<input class="input100" type="text" name="username" placeholder="Correo institucional">
@@ -69,7 +63,7 @@
 				</div>
 
 				<div class="wrap-input100 validate-input m-b-25" data-validate = "password">
-					<input class="input100" type="password" name="pass" placeholder="contraseña (8 caracteres mínimo)">
+					<input class="input100" type="password" name="pass" placeholder="Contraseña (8 caracteres mínimo)">
 					<span class="focus-input100"></span>
 				</div>
 
@@ -78,12 +72,14 @@
 																		
 				<div class="container-login100-form-btn">
 					<button class="login100-form-btn">
-						<a href="login.html"><i class="fa fa-user-o"></i> Iniciar sesión </a>
+						<a href="login.html"> Recuperar </a>
 					</button>
 				</div>
-			</div>
-				
-			</form>			
+				<div class="text-center">
+					<br> <a href="Crearcuenta.html">¿Aún no tienes cuenta? Crea una! </a> 
+					<br><a href="login.html">¿Tienes cuenta? Inicia sesión </a> 
+				</div>
+			</div>	
 		</div>
 	</div>
 	
