--- a/login.html
+++ b/login.html
@@ -54,49 +54,7 @@
 	<body>
 		<!-- HEADER -->
 		<header>
-			<!-- TOP HEADER -->
-			<div id="top-header">
-				<div class="container">
-					<ul class="header-links pull-left">
-						<li><a href="#"><i class="fa fa-phone"></i>555555555</a></li>
-						<li><a href="#"><i class="fa fa-envelope-o"></i> ayudaescommerce@gmail.com</a></li>
-						<!-- Header Modal -->
-						<li><a href="#escom" class="fa fa-map-marker" data-toggle="modal"> ESCOM</a></li>
-						<div class="modal fade" id="escom">
-								<div class="modal_dialog">
-									<div class="modal-content">
-										<div class="modal-header">
-											<button tyle="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-											<h4 class="modal-title">Confirmación											
-											</h4>
-										</div>
-										<!-- Header Body -->
-										<div class="modal-body">
-											<p>
-											
-											Dirección: ESCOM IPN, Unidad Profesional Adolfo López Mateos, 07320 Ciudad de México, CDMX
-										<br>	Horas: 
-										<br>martes	7:00–9:30
-										<br>miércoles	7:00–9:30
-										<br>jueves	7:00–9:30
-										<br>viernes	7:00–9:30
-										<br>sábado	Cerrado
-										<br>domingo	Cerrado
-										<br>lunes	7:00–9:30
-										<br>Estudiantes: 3,000​ (aproximadamente)</br>
-										<br>Director: Andrés Ortigoza Campos</br>
-										<br>Fundación: 13 de agosto de 1993</br>
-										<br>Decano: Ignacio Ríos de la Torre</br>
-										<br>Tipo: Pública</br>
-											</br>
-											</p>
-										</div>
-									</div>
-								</div>
-						</div>
-					</ul>
-				</div>
-			</div>
+			<!-- TOP HEADER --
 			<!-- /TOP HEADER -->
 			<div class="container-login100" style="background-image: url('img/escom1.jpeg');">
 				<div class="wrap-login100 p-l-55 p-r-55 p-t-80 p-b-30">
@@ -120,8 +78,9 @@
 							</button>
 						</div>
 							
-						<div text-center>
-							<br> <a href="Recuperar.html">Recuperar contraseña </a> 
+						<div class="text-center">
+							<br> <a href="Recuperar.html">¿Olvidaste tu contraseña? Recupérala ahora </a> 
+							<br><a href="Recuperar.html">¿Tienes cuenta? Inicia sesión </a> 
 						</div>
 
 					</div>
