--- a/Recuperar.html
+++ b/Recuperar.html
@@ -58,8 +58,13 @@
 					Recuperar contraseña
 				</span>
 
-				<div class="wrap-input100 validate-input m-b-20" data-validate="email">
+				<div class="wrap-input100 validate-input m-b-20" data-validate="nombre">
 					<input class="input100" type="text" name="username" placeholder="Nombre">
+					<span class="focus-input100"></span>
+				</div>
+
+				<div class="wrap-input100 validate-input m-b-20" data-validate="apellido">
+					<input class="input100" type="text" name="username" placeholder="Apellido">
 					<span class="focus-input100"></span>
 				</div>
 
