--- a/login.html
+++ b/login.html
@@ -93,10 +93,7 @@
 								</div>
 						</div>
 					</ul>
-					<ul class="header-links pull-right">
-						<li><a href="#"><i class="fa fa-dollar"></i>MXN</a></li>
-						<li><a href="perfil.html" href="#"><i class="fa fa-user-o"></i>Mi perfil</li></a>
-					</ul>
+					
 				</div>
 			</div>
 			<!-- /TOP HEADER -->
@@ -118,7 +115,7 @@
 						</div>
 						<div class="container-login100-form-btn">
 							<button class="login100-form-btn">
-								<a href="Metododepag.html"><i class="fa fa-user-o"></i> Iniciar sesión </a>
+								<a href="index.html"><i class="fa fa-user-o"></i> Iniciar sesión </a>
 							</button>
 						</div>
 
