--- a/comida.html
+++ b/comida.html
@@ -123,14 +123,60 @@
 						<div class="col-md-3 clearfix">
 							<div class="header-ctn">
 								<!-- Wishlist -->
-								<div>
-									<a href="#">
-										<i class="fa fa-heart-o"></i>
-										<span>Deseos</span>
-										<div class="qty">2</div>
-									</a>
+							<div class="dropdown">
+								<a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
+									<i class="fa fa-heart-o"></i>
+									<span>Deseos</span>
+									<div class="qty">3</div>
+								</a>
+								<div class="cart-dropdown">
+									<div class="cart-list">
+										<div class="product-widget">
+											<div class="product-img">
+												<img src="./img/chamarraipn.png" alt="">
+											</div>
+											<div class="product-body">
+												<h3 class="product-name">Poli BOMBER</h3>
+												<h4 class="product-price"><span class="qty">1x</span>$680.00</h4>
+											</div>
+											
+										</div>
+
+										<div class="product-widget">
+											<div class="product-img">
+												<img src="./img/gorra.jpg" alt="">
+											</div>
+											<div class="product-body">
+												<h3 class="product-name">GorraB.B</h3>
+												<h4 class="product-price"><span class="qty">1x</span>$580.00</h4>
+											</div>
+											<button class="delete"><i class="fa fa-close"></i></button>
+										</div>
+									</div>
+
+									<div class="product-widget">
+										<div class="product-img">
+											<img src="./img/unoclasico.jpg" alt="">
+										</div>
+										<div class="product-body">
+											<h3 class="product-name">uno clásico</h3>
+											<h4 class="product-price"><span class="qty">1x</span>$80.00</h4>
+										</div>
+										<button class="delete"><i class="fa fa-close"></i></button>
+									</div>
+								
+									<div class="cart-summary">
+										<small>3 Articulos</small>
+										<h5>SUBTOTAL: $1,340.00</h5>
+									</div>
+									<div class="cart-btns">
+										<a href="#">Eliminar</a>
+										<a href="checkout.html" href="#">Comprar<i class="fa fa-arrow-circle-right"></i></a>
+									</div>
 								</div>
-								<!-- /Wishlist -->
+							</div>
+							<!-- /Wishlist -->
+
 
 								<!-- Cart -->
 								<div class="dropdown">
