--- a/deleteproduct.html
+++ b/deleteproduct.html
@@ -123,69 +123,7 @@
 						<!-- ACCOUNT -->
 						<div class="col-md-3 clearfix">
 							<div class="header-ctn">
-								<!-- Wishlist -->
-								<div>
-									<a href="#">
-										<i class="fa fa-heart-o"></i>
-										<span>Deseos</span>
-										<div class="qty">2</div>
-									</a>
-								</div>
-								<!-- /Wishlist -->
-
-								<!-- Cart -->
-								<div class="dropdown">
-									<a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
-										<i class="fa fa-shopping-cart"></i>
-										<span>Ver carrito</span>
-										<div class="qty">3</div>
-									</a>
-									<div class="cart-dropdown">
-										<div class="cart-list">
-											<div class="product-widget">
-												<div class="product-img">
-													<img src="./img/chamarraipn.png" alt="">
-												</div>
-												<div class="product-body">
-													<h3 class="product-name">Poli BOMBER</h3>
-													<h4 class="product-price"><span class="qty">1x</span>$680.00</h4>
-												</div>
-												<button class="delete"><i class="fa fa-close"></i></button>
-											</div>
-
-											<div class="product-widget">
-												<div class="product-img">
-													<img src="./img/gorra.jpg" alt="">
-												</div>
-												<div class="product-body">
-													<h3 class="product-name">GorraB.B</h3>
-													<h4 class="product-price"><span class="qty">1x</span>$580.00</h4>
-												</div>
-												<button class="delete"><i class="fa fa-close"></i></button>
-											</div>
-										</div>
-
-										<div class="product-widget">
-											<div class="product-img">
-												<img src="./img/unoclasico.jpg" alt="">
-											</div>
-											<div class="product-body">
-												<h3 class="product-name">uno clásico</h3>
-												<h4 class="product-price"><span class="qty">1x</span>$80.00</h4>
-											</div>
-											<button class="delete"><i class="fa fa-close"></i></button>
-										</div>
-									
-										<div class="cart-summary">
-											<small>3 Articulos</small>
-											<h5>SUBTOTAL: $1,340.00</h5>
-										</div>
-										<div class="cart-btns">
-											<a href="#">Eliminar</a>
-											<a href="checkout.html"hrer href="#">Comprar<i class="fa fa-arrow-circle-right"></i></a>
-										</div>
-									</div>
-								</div>
+								
 						<!-- /ACCOUNT -->
 					</div>
 					<!-- row -->
@@ -349,10 +287,10 @@
 										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"> Eliminar</button>
+										<a href="productregister.html"><button class="add-to-cart-btn"> Eliminar</button></a>
 										<br>
 										<br>
-										<button class="add-to-cart-btn">Modificar</button>
+										<a href="productregister.html"><button class="add-to-cart-btn">Modificar</button></a>
 									</div>
 								</div>
 							</div>
@@ -380,10 +318,10 @@
 										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"> Eliminar</button>
+										<a href="productregister.html"><button class="add-to-cart-btn"> Eliminar</button></a>
 										<br>
 										<br>
-										<button class="add-to-cart-btn">Modificar</button>
+										<a href="productregister.html"><button class="add-to-cart-btn">Modificar</button></a>
 									</div>
 								</div>
 							</div>
@@ -410,10 +348,10 @@
 										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"> Eliminar</button>
+										<a href="productregister.html"><button class="add-to-cart-btn"> Eliminar</button></a>
 										<br>
 										<br>
-										<button class="add-to-cart-btn">Modificar</button>
+										<a href="productregister.html"><button class="add-to-cart-btn">Modificar</button></a>
 									</div>
 								</div>
 							</div>
@@ -440,10 +378,10 @@
 										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"> Eliminar</button>
+										<a href="productregister.html"><button class="add-to-cart-btn"> Eliminar</button></a>
 										<br>
 										<br>
-										<button class="add-to-cart-btn">Modificar</button>
+										<a href="productregister.html"><button class="add-to-cart-btn">Modificar</button></a>
 									</div>
 								</div>
 							</div>
@@ -470,10 +408,10 @@
 										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"> Eliminar</button>
+										<a href="productregister.html"><button class="add-to-cart-btn"> Eliminar</button></a>
 										<br>
 										<br>
-										<button class="add-to-cart-btn">Modificar</button>
+										<a href="productregister.html"><button class="add-to-cart-btn">Modificar</button></a>
 									</div>
 								</div>
 							</div>
@@ -501,10 +439,10 @@
 										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"> Eliminar</button>
+										<a href="productregister.html"><button class="add-to-cart-btn"> Eliminar</button></a>
 										<br>
 										<br>
-										<button class="add-to-cart-btn">Modificar</button>
+										<a href="productregister.html"><button class="add-to-cart-btn">Modificar</button></a>
 									</div>
 								</div>
 							</div>
@@ -533,10 +471,10 @@
 										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"> Eliminar</button>
+										<a href="productregister.html"><button class="add-to-cart-btn"> Eliminar</button></a>
 										<br>
 										<br>
-										<button class="add-to-cart-btn">Modificar</button>
+										<a href="productregister.html"><button class="add-to-cart-btn">Modificar</button></a>
 									</div>
 								</div>
 							</div>
@@ -562,10 +500,10 @@
 										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"> Eliminar</button>
+										<a href="productregister.html"><button class="add-to-cart-btn"> Eliminar</button></a>
 										<br>
 										<br>
-										<button class="add-to-cart-btn">Modificar</button>
+										<a href="productregister.html"><button class="add-to-cart-btn">Modificar</button></a>
 									</div>
 								</div>
 							</div>
@@ -592,10 +530,10 @@
 										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"> Eliminar</button>
+										<a href="productregister.html"><button class="add-to-cart-btn"> Eliminar</button></a>
 										<br>
 										<br>
-										<button class="add-to-cart-btn">Modificar</button>
+										<a href="productregister.html"><button class="add-to-cart-btn">Modificar</button></a>
 									</div>
 								</div>
 							</div>
