--- a/login2.html
+++ b/login2.html
@@ -25,7 +25,7 @@
 
  		<!-- Custom stlylesheet -->
  		<link type="text/css" rel="stylesheet" href="css/style.css"/>
-		
+	
 	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
 	
 		<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
@@ -93,7 +93,10 @@
 								</div>
 						</div>
 					</ul>
-					
+					<ul class="header-links pull-right">
+						<li><a href="#"><i class="fa fa-dollar"></i>MXN</a></li>
+						<li><a href="perfil.html" href="#"><i class="fa fa-user-o"></i>Mi perfil</li></a>
+					</ul>
 				</div>
 			</div>
 			<!-- /TOP HEADER -->
@@ -101,7 +104,7 @@
 				<div class="wrap-login100 p-l-55 p-r-55 p-t-80 p-b-30">
 					<form class="login100-form validate-form">
 						<span class="login100-form-title p-b-37">
-							crear cuenta
+							Iniciar sesión
 						</span>
 		
 						<div class="wrap-input100 validate-input m-b-20" data-validate="email">
@@ -110,23 +113,19 @@
 						</div>
 		
 						<div class="wrap-input100 validate-input m-b-25" data-validate = "password">
-							<input class="input100" type="password" name="pass" placeholder="Contraseña de 8 caracteres mínimo">
+							<input class="input100" type="password" name="pass" placeholder="Contraseña">
 							<span class="focus-input100"></span>
 						</div>
 
-						<div class="wrap-input100 validate-input m-b-25" data-validate = "password">
-							<input class="input100" type="password" name="pass" placeholder="Vuelve a escribir la contraseña">
-							<span class="focus-input100"></span>
-						</div>
-
+						
 						<div class="wrap-input100 validate-input m-b-25" data-validate = "RFC">
-							<input class="input100" type="RFC" name="pass" placeholder="RFC">
+							<input class="input100" type="password" name="pass" placeholder="RFC">
 							<span class="focus-input100"></span>
 						</div>
 
 						<div class="container-login100-form-btn">
 							<button class="login100-form-btn">
-								<a href="login2.html"><i class="fa fa-user-o"></i> Crear cuenta </a>
+								<a href="productregister.html"><i class="fa fa-user-o"></i> Iniciar sesión </a>
 							</button>
 						</div>
 
