--- a/producto.html
+++ b/producto.html
@@ -194,7 +194,7 @@
 									</div>
 									<div class="cart-btns" id="cart_buttons">
 										<a href="#" id="delete">Eliminar</a>
-										<a href="checkout.html" hrer href="#">Comprar<i
+										<a id ="buy" href="#">Comprar<i
 												class="fa fa-arrow-circle-right"></i></a>
 									</div>
 								</div>
@@ -341,7 +341,7 @@
 									<span class="qty-down">-</span>
 								</div>
 							</div>
-							<a href="checkout.html"><button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i>
+							<a id="buyNow"><button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i>
 									Comprar</button></a>
 						</div>
 
