--- a/login.html
+++ b/login.html
@@ -1,91 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>ESCOMMERCE</title>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
- 		<!-- Google font -->
- 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
+<head>
+	<title>ESCOMMERCE</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
- 		<!-- Bootstrap -->
- 		<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
+	<!-- Google font -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
 
- 		<!-- Slick -->
- 		<link type="text/css" rel="stylesheet" href="css/slick.css"/>
- 		<link type="text/css" rel="stylesheet" href="css/slick-theme.css"/>
+	<!-- Bootstrap -->
+	<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
 
- 		<!-- nouislider -->
- 		<link type="text/css" rel="stylesheet" href="css/nouislider.min.css"/>
+	<!-- Slick -->
+	<link type="text/css" rel="stylesheet" href="css/slick.css" />
+	<link type="text/css" rel="stylesheet" href="css/slick-theme.css" />
 
- 		<!-- Font Awesome Icon -->
- 		<link rel="stylesheet" href="css/font-awesome.min.css">
+	<!-- nouislider -->
+	<link type="text/css" rel="stylesheet" href="css/nouislider.min.css" />
 
- 		<!-- Custom stlylesheet -->
- 		<link type="text/css" rel="stylesheet" href="css/style.css"/>
-		<!--===============================================================================================-->	
-	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
-	<!--===============================================================================================-->
-		<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
-	<!--===============================================================================================-->
-		<link rel="stylesheet" type="text/css" href="fontslogin/font-awesome-4.7.0/css/font-awesome.min.css">
-	<!--===============================================================================================-->
-		<link rel="stylesheet" type="text/css" href="fontslogin/iconic/css/material-design-iconic-font.min.css">
-	<!--===============================================================================================-->
-		<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
-	<!--===============================================================================================-->	
-		<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
-	<!--===============================================================================================-->
-		<link rel="stylesheet" type="text/css" href="vendor/animsition/css/animsition.min.css">
-	<!--===============================================================================================-->
-		<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
-	<!--===============================================================================================-->	
-		<link rel="stylesheet" type="text/css" href="vendor/daterangepicker/daterangepicker.css">
-	<!--===============================================================================================-->
-		<link rel="stylesheet" type="text/css" href="csslogin/util.css">
-		<link rel="stylesheet" type="text/css" href="csslogin/main.css">
-	<!--===============================================================================================-->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-		<script src="./js/login.js"></script>
+	<!-- Font Awesome Icon -->
+	<link rel="stylesheet" href="css/font-awesome.min.css">
 
-    </head>
-	<body>
-		<!-- HEADER -->
-		<header>
-			<!-- TOP HEADER --
+	<!-- Custom stlylesheet -->
+	<link type="text/css" rel="stylesheet" href="css/style.css" />
+	<!--===============================================================================================-->
+	<link rel="icon" type="image/png" href="images/icons/favicon.ico" />
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="fontslogin/font-awesome-4.7.0/css/font-awesome.min.css">
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="fontslogin/iconic/css/material-design-iconic-font.min.css">
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/animsition/css/animsition.min.css">
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/daterangepicker/daterangepicker.css">
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="csslogin/util.css">
+	<link rel="stylesheet" type="text/css" href="csslogin/main.css">
+	<!--===============================================================================================-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="./js/login.js"></script>
+
+</head>
+
+<body>
+	<!-- HEADER -->
+	<header>
+		<!-- TOP HEADER --
 			<!-- /TOP HEADER -->
-			<div class="container-login100" style="background-image: url('img/escom1.jpeg');">
-				<div class="wrap-login100 p-l-55 p-r-55 p-t-80 p-b-30">
-						<span class="login100-form-title p-b-37">
-							Iniciar sesión
-						</span>
-		
-						<div class="wrap-input100 validate-input m-b-20" data-validate="email">
-							<input id="email" class="input100" type="text" name="username" placeholder="Correo institucional">
-							<span class="focus-input100"></span>
-						</div>
-		
-						<div class="wrap-input100 validate-input m-b-25" data-validate = "password">
-							<input id="password" class="input100" type="password" name="pass" placeholder="Contraseña">
-							<span class="focus-input100"></span>
-						</div>
+		<div class="container-login100" style="background-image: url('img/escom1.jpeg');">
+			<div class="wrap-login100 p-l-55 p-r-55 p-t-80 p-b-30">
+				<span class="login100-form-title p-b-37">
+					Iniciar sesión
+				</span>
 
-						<div class="container-login100-form-btn">
-							<button id="button" class="login100-form-btn">
-								<i class="fa fa-user-o"></i>Iniciar Sesión
-							</button>
-						</div>
-							
-						<div class="text-center">
-							<br> <a href="Recuperar.html">¿Olvidaste tu contraseña? Recupérala ahora </a> 
-							<br><a href="Recuperar.html">¿Tienes cuenta? Inicia sesión </a> 
-						</div>
+				<div class="wrap-input100 validate-input m-b-20" data-validate="email">
+					<input id="email" class="input100" type="text" name="username" placeholder="Correo institucional">
+					<span class="focus-input100"></span>
+				</div>
 
-					</div>
-					</div>
-			
+				<div class="wrap-input100 validate-input m-b-25" data-validate="password">
+					<input id="password" class="input100" type="password" name="pass" placeholder="Contraseña">
+					<span class="focus-input100"></span>
+				</div>
+
+				<div class="container-login100-form-btn">
+					<button id="button" class="login100-form-btn">
+						<i class="fa fa-user-o"></i>Iniciar Sesión
+					</button>
+				</div>
+
+				<div class="text-center">
+					<br> <a href="Recuperar.html">¿Olvidaste tu contraseña? Recupérala ahora </a>
+					<br><a href="Crearcuenta.html">¿No tienes cuenta? Registrate ahora </a>
+				</div>
+
+			</div>
+		</div>
+
 
 		<!-- jQuery Plugins -->
 		<script src="js/jquery.min.js"></script>
@@ -95,5 +97,6 @@
 		<script src="js/jquery.zoom.min.js"></script>
 		<script src="js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
