--- a/confirmEmail.html
+++ b/confirmEmail.html
@@ -62,33 +62,18 @@
                 Verificar correo.
             </span>
 
-            <div class="mm-number">
-                <div class="mm-number-container">
-                    <div class="mm-number-input">
-                        <div class="mm-number-input-container animated">
-                            <div class="mm-number-input-item">
-                                <input type="number" pattern="\d*" class="animated" id="n1" max="1" placeholder="X">
-                            </div>
-                            <div class="mm-number-input-item">
-                                <input type="number" pattern="\d*" class="animated" id="n2" max="1" placeholder="X">
-                            </div>
-                            <div class="mm-number-input-item">
-                                <input type="number" pattern="\d*" class="animated" id="n3" max="1" placeholder="X">
-                            </div>
-                            <div class="mm-number-input-item">
-                                <input type="number" pattern="\d*" class="animated" id="n4" max="1" placeholder="X">
-                            </div>
-                            <div class="mm-number-input-item">
-                                <input type="number" pattern="\d*" class="animated" id="n5" max="1" placeholder="X">
-                            </div>
-                            <div class="mm-number-input-item">
-                                <input type="number" pattern="\d*" class="animated" id="n6" max="1" placeholder="X">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
+            
+                <div class="col-md-7">
+					<!-- Billing Details -->
+					<div class="token">
+						<div class="form-group">
+							<input class="input" id="name" type="text" name="Token" placeholder="Ingresa tu correo">
+						</div>
+                        <div class="form-group">
+							<input class="input" id="name" type="text" name="Token" placeholder="Ingresa tu token">
+						</div>
+					</div>
+				</div>
             <div class="container-login100-form-btn">
                 <button id="button" class="login100-form-btn">
                     Confirmar Correo
